# Klara

./: Cargo.toml  config.go  config.toml  config.yaml  config_test.go  go.mod  go.sum  layout.go  layout_test.go  main.go  pane.go  pane_test.go  render.go  render_test.go
src/: config.rs  error.rs  input.rs  layout.rs  lib.rs  main.rs  pane.rs  window.rs
src/renderer/: bg.wgsl  mod.rs  text.rs
src/terminal/: grid.rs  mod.rs
tests/: baseline.rs
