[package]
name = "klara"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30"
wgpu = "22"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"

[dev-dependencies]
tempfile = "3"
